--- a/KuranX.App/Core/ResourceXaml/homeDesign.xaml
+++ b/KuranX.App/Core/ResourceXaml/homeDesign.xaml
@@ -537,6 +537,20 @@
         <Setter Property="Margin" Value="0" />
         <Setter Property="Padding" Value="0" />
         <Setter Property="Background" Value="{DynamicResource Base.Panel.Right}" />
+
+        <Style.Triggers>
+            <Trigger Property="Visibility" Value="Visible">
+                <Trigger.EnterActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetProperty="Opacity"
+                             From="0.0" To="1.0" Duration="0:0:0.5" />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </Trigger.EnterActions>
+            </Trigger>
+
+        </Style.Triggers>
     </Style>
 
     <Style x:Key="hmwnd_navgationIcons" TargetType="{x:Type Button}">
