--- a/KuranX.App/Core/Pages/NoteF/NoteFrame.xaml
+++ b/KuranX.App/Core/Pages/NoteF/NoteFrame.xaml
@@ -23,7 +23,7 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <Popup x:Name="pp_moveBar" IsOpen="False" Placement="RelativePoint" AllowsTransparency="True" Width="470" Height="115" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade" HorizontalOffset="322" VerticalOffset="-20">
+        <Popup x:Name="pp_moveBar" StaysOpen="False" IsOpen="False" Placement="RelativePoint" AllowsTransparency="True" Width="470" Height="115" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade" HorizontalOffset="322" VerticalOffset="-20">
             <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="450" Height="95">
                 <Grid>
                     <Grid.RowDefinitions>
@@ -74,7 +74,7 @@
 
         <!-- Note -->
 
-        <Popup x:Name="popup_noteAddPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="400" Height="520" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+        <Popup x:Name="popup_noteAddPopup" StaysOpen="False" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="400" Height="520" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
             <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="380" Height="500">
                 <Grid>
@@ -128,7 +128,7 @@
             <!-- Note -->
         </Popup>
 
-        <Popup x:Name="popup_deleteNote" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="360" Height="190" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+        <Popup x:Name="popup_deleteNote" StaysOpen="False" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="360" Height="190" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
             <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="340" Height="170">
                 <Grid>
@@ -213,10 +213,10 @@
 
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="265" />
-                    <ColumnDefinition Width="265" />
-                    <ColumnDefinition Width="265" />
-                    <ColumnDefinition Width="265" />
+                    <ColumnDefinition Width="275" />
+                    <ColumnDefinition Width="275" />
+                    <ColumnDefinition Width="275" />
+                    <ColumnDefinition Width="275" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="78" />
