--- a/KuranX.App/Core/Pages/SubjectF/SubjectFrame.xaml
+++ b/KuranX.App/Core/Pages/SubjectF/SubjectFrame.xaml
@@ -19,7 +19,7 @@
 
         <!-- popup -->
 
-        <Popup x:Name="popup_FolderSubjectPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="370" Height="460" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+        <Popup x:Name="popup_FolderSubjectPopup" StaysOpen="False" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="370" Height="460" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
             <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="350" Height="440">
                 <Grid>
                     <Grid.RowDefinitions>
