--- a/KuranX.App/Core/Pages/SubjectF/SubjectItem.xaml
+++ b/KuranX.App/Core/Pages/SubjectF/SubjectItem.xaml
@@ -19,7 +19,7 @@
 
         <!-- Popup -->
 
-        <Popup x:Name="pp_moveBar" IsOpen="False" Placement="RelativePoint" AllowsTransparency="True" Width="470" Height="115" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade" HorizontalOffset="322" VerticalOffset="-20">
+        <Popup x:Name="pp_moveBar" StaysOpen="False" IsOpen="False" Placement="RelativePoint" AllowsTransparency="True" Width="470" Height="115" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade" HorizontalOffset="322" VerticalOffset="-20">
             <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="450" Height="95">
                 <Grid>
                     <Grid.RowDefinitions>
@@ -68,7 +68,7 @@
 
         <!-- Note  -->
 
-        <Popup x:Name="popup_Note" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="350" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+        <Popup x:Name="popup_Note" StaysOpen="False" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="350" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
             <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="480" Height="330">
                 <Grid>
@@ -120,7 +120,7 @@
             </Border>
         </Popup>
 
-        <Popup x:Name="popup_noteAddPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="400" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+        <Popup x:Name="popup_noteAddPopup" StaysOpen="False" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="400" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
             <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="380" Height="580">
                 <Grid>
@@ -175,7 +175,7 @@
             </Border>
         </Popup>
 
-        <Popup x:Name="popup_notesAllShowPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+        <Popup x:Name="popup_notesAllShowPopup" StaysOpen="False" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
             <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="480" Height="580">
                 <Grid>
@@ -221,7 +221,7 @@
         <!-- Note  -->
 
         <!-- Words -->
-        <Popup x:Name="popup_Words" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="940" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+        <Popup x:Name="popup_Words" StaysOpen="False" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="940" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
             <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="920" Height="580">
                 <Grid>
@@ -342,7 +342,7 @@
                         <RowDefinition />
                     </Grid.RowDefinitions>
 
-                    <Grid x:Name="loadContentGrid" Style="{DynamicResource aniEffectFadeGrid}" Visibility="Hidden">
+                    <Grid x:Name="loadContentGrid" Style="{DynamicResource aniEffectFadeGrid}" Visibility="Visible">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
