--- a/KuranX.App/Core/ResourceXaml/defaultDesign.xaml
+++ b/KuranX.App/Core/ResourceXaml/defaultDesign.xaml
@@ -7,6 +7,7 @@
 
     <BitmapImage x:Key="help_1" UriSource="/resource/images/Helps/help_1.png" />
     <BitmapImage x:Key="help_2" UriSource="/resource/images/Helps/help_2.png" />
+  
 
     <sys:Double x:Key="inputWidth">260</sys:Double>
     <sys:Double x:Key="inputHeight">41</sys:Double>
@@ -23,9 +24,9 @@
     </Style>
 
     <Style x:Key="{x:Type Popup}" TargetType="{x:Type Popup}">
-
         <Setter Property="AllowsTransparency" Value="True" />
     </Style>
+
 
     <!-- ROOT STYLE -->
 
@@ -735,6 +736,7 @@
     <Style x:Key="messageBoxHeader" TargetType="TextBlock">
         <Setter Property="TextAlignment" Value="Center" />
         <Setter Property="FontSize" Value="22" />
+        <Setter Property="Width" Value="320"/>
         <Setter Property="Foreground" Value="#1C1E2F" />
         <Setter Property="FontFamily" Value="{DynamicResource PoppinsSemiBold}" />
     </Style>
@@ -742,6 +744,7 @@
     <Style x:Key="messageBoxDetail" TargetType="TextBlock">
         <Setter Property="TextAlignment" Value="Center" />
         <Setter Property="FontSize" Value="12" />
+        <Setter Property="Width" Value="320"/>
         <Setter Property="TextWrapping" Value="Wrap" />
         <Setter Property="Foreground" Value="#383C41" />
         <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
